# megadrive-rust

./: .gitignore  AGENTS.md  README.md  dump_frame.sh  run.sh  verify_accuracy.sh
crates/cli/: Cargo.toml
crates/cli/src/: hud_toast.rs  main.rs
crates/cli/src/egui_ui/: cheat_model.rs  cheat_search.rs  gl_game.rs  hex_viewer.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: audio.rs  cartridge.rs  cpu.rs  input.rs  lib.rs  memory.rs  system.rs  vdp.rs  z80.rs
crates/core/src/tests/: cpu_tests.rs  vdp_tests.rs
crates/core/tests/: apu_regression.rs  vdp_regression.rs
scripts/: release-env.sh
tests/opcode_profile/: comix_zone_10m.snapshot  dbz_buyuu_10m.snapshot  sonic3_10m.snapshot.new
